--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.6.1"
 coreKtxVersion = "1.6.1"
+dexmakerMockito = "2.28.4"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 composeBom = "2024.09.02"
@@ -46,7 +47,6 @@ coreTesting = "2.2.0"
 mockkAndroid = "1.10.5"
 mockk = "1.12.0"
 mockwebserver = "4.9.1"
-junitJunit = "4.12"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -54,6 +54,7 @@ androidx-core-testing = { module = "androidx.arch.core:core-testing", version.re
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
 core-ktx = { module = "androidx.test:core-ktx", version.ref = "coreKtxVersion" }
+dexmaker-mockito = { module = "com.linkedin.dexmaker:dexmaker-mockito", version.ref = "dexmakerMockito" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -99,7 +100,7 @@ androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx"
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
-junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
